--- a/themes/light/_config.yml
+++ b/themes/light/_config.yml
@@ -1,7 +1,7 @@
 menu:
   计算机电子书: /
   龙哥盟: http://www.flygon.net
-  留言板: /about
+  "fork me on gitcafe": https://gitcafe.com/it-ebooks/blog
 
 sidebar: right
 widgets:
