--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "hexo-site",
-  "version": "2.8.3",
+  "version": "0.0.0",
   "private": true,
+  "hexo": {
+    "version": "3.1.1"
+  },
   "dependencies": {
-    "hexo-renderer-ejs": "0.1.0",
-    "hexo-renderer-stylus": "0.1.0",
-    "hexo-renderer-marked": "0.1.0",
-    "hexo-migrator-wordpress": "^0.1.1",
-    "hexo-generator-feed": "0.2.1",
-    "hexo-generator-sitemap": "0.2.0"
+    "hexo": "^3.1.0",
+    "hexo-generator-archive": "^0.1.2",
+    "hexo-generator-category": "^0.1.2",
+    "hexo-generator-index": "^0.1.2",
+    "hexo-generator-tag": "^0.1.1",
+    "hexo-renderer-ejs": "^0.1.0",
+    "hexo-renderer-stylus": "^0.3.0",
+    "hexo-renderer-marked": "^0.2.4",
+    "hexo-server": "^0.1.2",
+    "hexo-generator-feed": "*",
+    "hexo-generator-sitemap": "*"
   }
 }
