--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-renderer-marked": "^0.2.4",
     "hexo-server": "^0.1.2",
     "hexo-generator-feed": "*",
-    "hexo-generator-sitemap": "*"
+    "hexo-generator-sitemap": "*",
+	"hexo-deployer-git": "*"
   }
 }
