--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   },
   "dependencies": {
     "hexo": "^3.1.0",
+    "hexo-deployer-git": "*",
     "hexo-generator-archive": "^0.1.2",
+    "hexo-generator-baidu-sitemap": "^0.1.1",
     "hexo-generator-category": "^0.1.2",
+    "hexo-generator-feed": "*",
     "hexo-generator-index": "^0.1.2",
+    "hexo-generator-sitemap": "*",
     "hexo-generator-tag": "^0.1.1",
     "hexo-renderer-ejs": "^0.1.0",
-    "hexo-renderer-stylus": "^0.3.0",
     "hexo-renderer-marked": "^0.2.4",
-    "hexo-server": "^0.1.2",
-    "hexo-generator-feed": "*",
-    "hexo-generator-sitemap": "*",
-	"hexo-deployer-git": "*"
+    "hexo-renderer-stylus": "^0.3.0",
+    "hexo-server": "^0.1.2"
   }
 }
