--- a/themes/light/_config.yml
+++ b/themes/light/_config.yml
@@ -1,6 +1,6 @@
 menu:
   计算机电子书: /
-  其它教程 /misc
+  其它教程: /misc
   龙哥盟: http://www.flygon.net
   "fork me on gitcafe": https://gitcafe.com/it-ebooks/blog
 
