--- a/themes/light/_config.yml
+++ b/themes/light/_config.yml
@@ -2,6 +2,7 @@ menu:
   其它教程: /misc
   开发者: /developer
   归档页: https://github.com/wizardforcel/dev-tutorial
+  关于: /about
   龙哥盟: http://www.flygon.net
   "fork me on gitcafe": https://gitcafe.com/it-ebooks/blog
 
