--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,14 @@
 
 # Site
 title: 计算机电子书
-subtitle: 专注于计算机开放电子书
-description:
+subtitle: 
+description: 龙哥盟·计算机电子书 - 百余种计算机电子书精选
+keywords: 计算机,编程,电子书,pdf,epub,java,c++,php,python,javascript
 author: Flygon
 email:
 language: zh-CN
+google_site_verification: NCXVSqxqB-os803-VFMtIEd1SUNJVOIjctCfNYUwD0w
+icon: 
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
