--- a/themes/landfarz/_config.yml
+++ b/themes/landfarz/_config.yml
@@ -4,6 +4,7 @@ menu:
   归档页: https://github.com/wizardforcel/dev-tutorial
   关于: /about
   龙哥盟: http://www.flygon.net
+  RSS: /atom.xml
   "fork me on gitcafe": https://gitcafe.com/it-ebooks/blog
 
 sidebar: right
