--- a/themes/landfarz/_config.yml
+++ b/themes/landfarz/_config.yml
@@ -5,7 +5,7 @@ menu:
   关于: /about
   龙哥盟: http://www.flygon.net
   RSS: /atom.xml
-  "fork me on coding": https://coding.net/u/wizardforcel/p/it-ebooks/git
+  "fork me on github": https://github.com/it-ebooks/blog
 
 sidebar: right
 widgets:
