--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 计算机电子书
 subtitle: 
-description: 龙哥盟·计算机电子书 - 百余种计算机电子书精选
+description: 龙哥盟·计算机电子书 - 专注于计算机开放电子书
 keywords: 计算机,编程,电子书,pdf,epub,java,c++,php,python,javascript
 author: Flygon
 email:
